use navbar-static-top instead of navbar-fixed-top Hidden the username on narrow screens.

--- a/app/assets/stylesheets/bootstrap_defaults.css.scss
+++ b/app/assets/stylesheets/bootstrap_defaults.css.scss
@@ -1,4 +1,3 @@
-body { padding-top: 60px; }
 html,
 body {
   height: 100%;
@@ -33,6 +32,13 @@ body {
   }
 }
 
+//Hide the user email below 1200px
+@media (max-width: 1200px) {
+  .user-email {
+    visibility: hidden;
+    width: 0px;
+  }
+}
 
 /* Custom page CSS
       -------------------------------------------------- */
